changed colors n such

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
         <button class="tablinks active" onclick="openTab(event, 'Welcome')">Home</button>
         <button class="tablinks" onclick="openTab(event, 'Trails')">Trails</button>
         <button class="tablinks" onclick="openTab(event, 'About')">About Us</button>
-
+        <button class="tablinks" onclick="openTab(event, 'Stories')">Stories</button>
     </div>
 
     <!-- Tab content -->
@@ -84,6 +84,10 @@
 
     <div id="Welcome" class="tabcontent" style="display: block;">
         <div data-include="pages/welcome"></div>
+    </div>
+
+    <div id="Stories" class="tabcontent">
+        <div data-include="pages/stories"></div>
     </div>
 
 </div> <!-- maincontent -->
