--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,7 @@
         <button class="tablinks" onclick="openTab(event, 'Trails')">Trails</button>
         <button class="tablinks" onclick="openTab(event, 'About')">About Us</button>
         <button class="tablinks" onclick="openTab(event, 'Stories')">Stories</button>
+        <button class="tablinks" onclick="openTab(event, 'Parks')">Parks</button>
     </div>
 
     <!-- Tab content -->
@@ -88,6 +89,10 @@
 
     <div id="Stories" class="tabcontent">
         <div data-include="pages/stories"></div>
+    </div>
+
+    <div id="Parks" class="tabcontent">
+        <div data-include="pages/nationalParks"></div>
     </div>
 
 </div> <!-- maincontent -->
