--- a/public/index.html
+++ b/public/index.html
@@ -68,19 +68,18 @@
     <div class="tabnames">
         
         <button class="tablinks active" onclick="openTab(event, 'Welcome')">Home</button>
-        <button class="tablinks" onclick="openTab(event, 'Trails')">Trails</button>
-        <button class="tablinks" onclick="openTab(event, 'About')">About Us</button>
         <button class="tablinks" onclick="openTab(event, 'Stories')">Stories</button>
         <button class="tablinks" onclick="openTab(event, 'Parks')">Parks</button>
+        <button class="tablinks" onclick="openTab(event, 'Events')">Events</button>
+        <button class="tablinks" onclick="openTab(event, 'Warm')">Warm Activities</button>
+        <button class="tablinks" onclick="openTab(event, 'Acc')">Accommodations</button>
+        <button class="tablinks" onclick="openTab(event, 'About')">About Us</button>
+
     </div>
 
     <!-- Tab content -->
     <div id="About" class="tabcontent">
         <div data-include="pages/about"></div>
-    </div> <!-- setup content -->
-
-    <div id="Trails" class="tabcontent">
-        <div data-include="pages/trails"></div>
     </div> <!-- setup content -->
 
     <div id="Welcome" class="tabcontent" style="display: block;">
@@ -95,12 +94,24 @@
         <div data-include="pages/nationalParks"></div>
     </div>
 
+    <div id="Events" class="tabcontent">
+        <div data-include="pages/events"></div>
+    </div>
+
+    <div id="Warm" class="tabcontent">
+        <div data-include="pages/warm_activities"></div>
+    </div>
+
+    <div id="Acc" class="tabcontent">
+        <div data-include="pages/accommodations"></div>
+    </div>
+
+
+    
+
 </div> <!-- maincontent -->
 <!-- footer -->
 <div data-include="includes/footer"></div>
-<p>
-
-</p>
 
 </body>
 
