--- a/public/index.html
+++ b/public/index.html
@@ -72,8 +72,9 @@
         <button class="tablinks" onclick="openTab(event, 'Parks')">Parks</button>
         <button class="tablinks" onclick="openTab(event, 'Events')">Events</button>
         <button class="tablinks" onclick="openTab(event, 'Warm')">Warm Activities</button>
+        <button class="tablinks" onclick="openTab(event, 'Cold')">Cold Activities</button>
+        <button class="tablinks" onclick="openTab(event, 'Hike')">Hiking</button>
         <button class="tablinks" onclick="openTab(event, 'Acc')">Accommodations</button>
-        <button class="tablinks" onclick="openTab(event, 'About')">About Us</button>
 
     </div>
 
@@ -100,6 +101,14 @@
 
     <div id="Warm" class="tabcontent">
         <div data-include="pages/warm_activities"></div>
+    </div>
+    
+    <div id="Cold" class="tabcontent">
+        <div data-include="pages/cold"></div>
+    </div>
+
+    <div id="Hike" class="tabcontent">
+        <div data-include="pages/hiking"></div>
     </div>
 
     <div id="Acc" class="tabcontent">
