--- a/public/pages/nationalParks.html
+++ b/public/pages/nationalParks.html
@@ -9,9 +9,7 @@
 <body>
 
     <div class="container">
-        <header class="header">
           <h1 class="header-title">NATIONAL PARKS AND MONUMENTS</h1>
-        </header>
       
         <p class="header-subtitle">Ever wondered if there's more to Arizona than just deserts and cacti? Here are the top 5 national parks you should check out!</p>
         <div class="container">
@@ -72,14 +70,14 @@
             <p>Monument Valley Navajo Tribal Park has been inhabited by indigenous peoples for thousands of years, with evidence of human presence dating back to ancient times. The park was established in 1958 to preserve the natural and cultural resources of the region, including its iconic rock formations, ancient petroglyphs, and traditional Navajo way of life. Today, it remains a sacred and cherished landscape, attracting visitors from around the world with its awe-inspiring beauty and cultural significance.</p>
         </div>
 
-        <label for="park">Which National Park do You want to visit?</label><br>
+        <!-- <label for="park">Which National Park do You want to visit?</label><br>
         <select id="park" name="park">
             <option value="1. Grand Canyon National Park">Grand Canyon National Park</option>
             <option value="2. Petrified Forest National Park">Petrified Forest National Park</option>
             <option value="3. Saguaro National Park">Saguaro National Park</option>
             <option value="4. Canyon de Chelly National Monument">Canyon de Chelly National Monument</option>
             <option value="5. Monument Valley Navajo Tribal Park">Monument Valley Navajo Tribal Park</option>
-        </select><br><br>
+        </select><br><br> -->
 
     
   
