--- a/public/pages/warm_activities.html
+++ b/public/pages/warm_activities.html
@@ -11,7 +11,7 @@
            padding: 15px;
         }
 
-        .sh2{
+        .sh3{
            font-family: Arial, Helvetica, sans-serif;
            text-align: center;
            padding: 5px;
@@ -42,6 +42,8 @@
 
         table {
             border-collapse: collapse;
+            width: 50%;
+            max-width: 600px;
             padding: 10px;
             margin: 0 auto;
             background-color: lightblue;
@@ -58,9 +60,10 @@
    	</style>
    </head>
 	<body>
-        <h1 class="sh1">5 Things to do in the Arizona Summer</h1>
+        <h1>Warm Activities</h1>
+        <h2>5 Things to do in the Arizona Summer</h2>
         
-        <h2 class="sh2">1. Six Flags Hurricane Harbor</h2>
+        <h3 class="sh3">1. Six Flags Hurricane Harbor</h3>
         <div class="listDiv">
             <img class ="listImages" src="images/waterpark.jpg" alt="Water Slide">
             <p class="listP">Six Flags Hurricane Harbor provides a fun escape from the desert heat! 
@@ -72,7 +75,7 @@
         </div>
 
 
-        <h2 class="sh2">2. Salt River Tubing</h2>
+        <h3 class="sh3">2. Salt River Tubing</h3>
         <div class="listDiv">
             <img class ="listImages" src="images/saltriver.jpg" alt="Desert River">
             <p class="listP">Salt River tubing is a fun time for the family! You can rent a tube out for the day and float
@@ -85,7 +88,7 @@
         </div>
 
 
-        <h2 class="sh2">3. Phoenix Hot Air Balloon Ride at Sunrise</h2>
+        <h3 class="sh3">3. Phoenix Hot Air Balloon Ride at Sunrise</h3>
         <div class="listDiv">
             <img class ="listImages" src="images/hotairballoon.jpg" alt="Hot Air Ballon">
             <p class="listP">An early morning hot air ballon ride gives you an amazing view of the desert sunrise. This one is a bit
@@ -96,7 +99,7 @@
             <p class="listP"> <strong>Website: </strong><a href="https://www.viator.com/tours/Phoenix/Sunrise-Hot-Air-Balloon-Ride-from-Phoenix/d639-6746P3">viator.com</a></p>
         </div>
 
-        <h2 class="sh2">4. Visit Sedona</h2>
+        <h3 class="sh3">4. Visit Sedona</h3>
         <div class="listDiv">
             <img class ="listImages" src="images/sedona.jpg" alt="Rock Formations at Sedona">
             <p class="listP">Sedona is known for its absolutely stunning landscape. There are many natural rock formations to see as well
@@ -108,7 +111,7 @@
             <p class="listP"> <strong>Website: </strong><a href="https://visitsedona.com/">visitsedona.com</a></p>
         </div>
 
-        <h2 class="sh2">5. Pima Air & Space Museum</h2>
+        <h3 class="sh3">5. Pima Air & Space Museum</h3>
         <div class="listDiv">
             <img class ="listImages" src="images/plane.jpg" alt="Plane in Hangar">
             <p class="listP">The Pima Air & Space Museum features over 400 historic aircraft ranging from the early to modern. The museum
