--- a/public/pages/cold.html
+++ b/public/pages/cold.html
@@ -7,9 +7,14 @@
 </head>
 <body>
 	<h1>Cold Weather Activities</h1>
-	<p><h2>Believe it or not, even in Arizona we tend to get a cold winter.</h2></p>
-	<p><h2>Here are six activities you and your family
-	can try do when looking to get out of the house on a cold winters day.</h2></p>
+	<div class="short_tab">
+		<h4>Believe it or not, even in Arizona we tend to get a cold winter.</h4>
+	</div>
+	<div class="short_tab">
+		<h4>Here are six activities you and your family
+			can try do when looking to get out of the house on a cold winters day.</h4>
+	</div>
+	
 	<div class="activity">
 		<p><h3>Snow Bowl</h3></p>
 		<img src="images/snowbowl.jpg" alt="snowbowl" width="550" height="250">
