--- a/public/pages/hiking.html
+++ b/public/pages/hiking.html
@@ -6,8 +6,8 @@
 <link rel="stylesheet" type="text/css" href="css/stylesheet_activ.css">
 </head>
 <body>
-	<p><h1>A visitors guide to Hiking in Arizona</h1></p>
-	<p><h2>Below we have listed 6 of the best hikes in Arizona, suited to a wide range of physical ability.</h2></p>
+	<p><h1>Hiking in Arizona</h1></p>
+	<p class="short_tab" style="font-size: 18px;">Below we have listed 6 of the best hikes in Arizona, suited to a wide range of physical ability.</p>
 	<div class="activity">
 		<p><h3>Grand Canyon</h3></p>
 		<img src="images/grandcanyon.jpg" alt="grand canyon" width="550" height="250">
