--- a/public/pages/stories.html
+++ b/public/pages/stories.html
@@ -9,9 +9,7 @@
 <body>
 
 <div class="container">
-  <header class="header">
-    <h1 class="header-title">FEATURED STORIES</h1>
-  </header>
+  <h1>FEATURED STORIES</h1>
 
   <div class="main-content">
     <div class="story">
