--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Explore AZ</title>
-    <link rel="icon" type="image/x-icon" href="images/DEF-Logos/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/.ico">
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -47,11 +47,6 @@
     <!-- Google Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bree+Serif">
-    <style>
-    body {
-      font-family: "Bree Serif", sans-serif;
-    }
-    </style>
 
 </head>
 <body>
