--- a/public/pages/welcome.html
+++ b/public/pages/welcome.html
@@ -1,1 +1,22 @@
-<h1>Come Explore Arizona!<h1>
+<div>
+    <h1>Explore Arizona!</h1>
+
+    <p class="short_tab">Arizona is a state with a wide range of activities for all ages and interests. From hiking to skiing, Arizona has it all.</p>
+
+    <div class="short_tab" style="font-size: 16px">
+        <bold>Click one of the tabs above to learn about what Arizona has to offer!</bold>
+    </div>
+
+    <a class="weatherwidget-io" href="https://forecast7.com/en/33d45n112d07/phoenix/?unit=us" data-label_1="PHOENIX" data-label_2="WEATHER" style="border: solid #BF0A30; border-radius: 1.5rem">PHOENIX WEATHER</a>
+    <script>
+        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id))
+            {js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+    </script>
+
+    <a class="weatherwidget-io" href="https://forecast7.com/en/32d22n110d93/tucson/?unit=us" data-label_1="TUCSON" data-label_2="WEATHER" style="border: solid #002868; border-radius: 1.5rem">TUCSON WEATHER</a>
+    <script>
+        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id))
+            {js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+    </script>
+
+</div>
