--- a/public/index.html
+++ b/public/index.html
@@ -63,13 +63,14 @@
     <div class="tabnames">
         
         <button class="tablinks active" onclick="openTab(event, 'Welcome')">Home</button>
-        <button class="tablinks" onclick="openTab(event, 'Stories')">Stories</button>
+        <button class="tablinks" onclick="openTab(event, 'Food')">Food</button>
         <button class="tablinks" onclick="openTab(event, 'Parks')">Parks</button>
         <button class="tablinks" onclick="openTab(event, 'Events')">Events</button>
+        <button class="tablinks" onclick="openTab(event, 'Hike')">Hiking</button>
         <button class="tablinks" onclick="openTab(event, 'Warm')">Warm Activities</button>
         <button class="tablinks" onclick="openTab(event, 'Cold')">Cold Activities</button>
-        <button class="tablinks" onclick="openTab(event, 'Hike')">Hiking</button>
         <button class="tablinks" onclick="openTab(event, 'Acc')">Accommodations</button>
+        <button class="tablinks" onclick="openTab(event, 'Stories')">Stories</button>
 
     </div>
 
@@ -84,6 +85,10 @@
 
     <div id="Stories" class="tabcontent">
         <div data-include="pages/stories"></div>
+    </div>
+
+    <div id="Food" class="tabcontent">
+        <div data-include="pages/food"></div>
     </div>
 
     <div id="Parks" class="tabcontent">
