--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 
-<!--[if lte IE 9]><html lang="en" dir="ltr" class="lte-ie9 external-links ua-brand-icons sticky-footer"><![endif]-->
-<!--[if (gt IE 9)|(gt IEMobile 7)]><!-->
 <html lang="en" dir="ltr" class="external-links ua-brand-icons sticky-footer">
-<!--<![endif]-->
+
 <html lang="en" class="external-links ua-brand-icons sticky-footer">
 
 </html>
@@ -16,14 +14,14 @@
     <title>Explore AZ</title>
     <link rel="icon" type="image/x-icon" href="images/.ico">
 
-    <!-- jQuery -->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
+
     <script src="https://cdn.uadigital.arizona.edu/lib/ua-bootstrap/v1.0.0-beta.17/ua-bootstrap.min.js"></script>
-    <!-- bootrap 3 -->
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <!--  engr scripts -->
+
     <script src="scripts/toggles.js"></script>
     <script>
         $(function () {
@@ -35,16 +33,16 @@
         });
     </script>
 
-    <!-- Latest icon font stylesheet -->
+
     <link rel="stylesheet" href="https://cdn.uadigital.arizona.edu/lib/ua-brand-icons/latest/ua-brand-icons.css">
-    <!-- Compiled and minified UA Bootstrap CSS, icon font not included -->
+
     <link rel="stylesheet"
         href="https://cdn.uadigital.arizona.edu/lib/ua-bootstrap/v1.0.0-beta.17/ua-bootstrap.min.css">
-    <!-- EngrIT CSS for Admin Request app -->
+
     <link href="css/azStyle.css" rel="stylesheet">
-    <!-- pretty tables -->
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!-- Google Icons -->
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bree+Serif">
 
@@ -56,9 +54,9 @@
 <script>
     document.getElementById("Setup").click();
 </script>
-<!-- Start o content -->
+<!-- Start of content -->
 <div class="maincontent">
-    <!--<div data-include="intro"></div> -->
+
     <!-- Tab links -->
     <div class="tabnames">
         
@@ -118,7 +116,7 @@
 
     
 
-</div> <!-- maincontent -->
+</div>
 <!-- footer -->
 <div data-include="includes/footer"></div>
 
